src/frontend/tui/snapshots/illustrious_manager__frontend__tui__session_picker__tests__session_picker_second_selected.snap
---
source: src/frontend/tui/session_picker.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌ Sessions (j/k to navigate, Enter to open, q to close) ───────┐        "
"        │  01900000  First session message                             │        "
"        │> 01900000  Second session message                            │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
