src/frontend/tui/snapshots/illustrious_manager__frontend__tui__session_picker__tests__session_picker_with_sessions.snap
---
source: src/frontend/tui/session_picker.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌ Sessions (j/k to navigate, Enter to open, q to close) ───────┐        "
"        │> 01900000  Hello, can you help me write a Rust function?     │        "
"        │  01900000  Explain the borrow checker                        │        "
"        │  01900000  (no messages)                                     │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
